@@ -1,3 +1,11 @@
+2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b234
+
+	* 978315: Add 'onsubmit' flags to disable the submit buttons on
+	  critical forms to prevent double-clicking.
+
+	* Change: Fix syntax error in adv_search.php (even though we're
+	  not using it yet)
+
 2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b233
 
 	* 969218: Attempt to prevent detection of binaries that don't
